--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "async": "^2.3.0",
     "dotenv": "^4.0.0",
-    "lol-js": "^2.0.2"
+    "lol-js": "^2.0.2",
+    "mongodb": "^2.2.26",
+    "mongoose": "^4.9.6"
   }
 }
