--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "async": "^2.3.0",
     "dotenv": "^4.0.0",
     "lol-js": "^2.0.2",
+    "moment": "^2.18.1",
     "mongodb": "^2.2.26",
     "mongoose": "^4.9.6"
   }
